Fixed broken imports and Circular Dependency